views/style/style.css
body{
    font-family: Georgia, Palatino, serif;
    color: #444444;
    line-height: 1;
    background-color:  #fff;
    margin: 0;
}

#page {
  width: 100%;
}

#header {
  background-color: #89bf04;
  height: 10%;
  display: table;
  width: 100%;
}

#header .title {
  display: table-cell;
  font-family: 'Fredoka One', cursive;
  color: #b10e2b;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  padding-left: 10%;
  padding-top:  5px;
  width: 40%;
}
#header h1 {
  font-size: 1.5em;
  padding: 0;
  margin: 0;
}

#header h4 {
  font-size: 0.9em;
  padding: 0;
  margin: 0;
  margin-bottom: 5px;
}

#header #selector {
  display: table-cell;
  width: 60%;
}

#header #selector input {
  width: 50%;
}

.resources {
  margin-left: 10%;
  padding-top: 15px;
  margin-right: 10%;
}
.resource {
  display: table;
  width: 100%;
  border-top:1px solid #000;
  height: 30px;
  padding-top: 5px;
}

.resource .name {
  display: table-cell;
  width: 25%;
}
.resource .title {
  display: table-cell;
  width: 40%;
}
.resource .name a {
  color: #999999;
  font-size: 19px;
  font-weight: bold;
  font-family: 'Droid Sans', sans-serif;
}
.resource .name a:hover {
  color: black;
}
.resource .menu {
  float: right;
  color: #666666;
  font-size: 0.9em;
}

.resource .menu a {
  color: #666;
}
.methods {
  margin-left: 5%;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
}

.methods .method {
  display: table;
  width: 100%;
  background-color: #f9f2e9;
  margin-bottom: 5px;
  padding: 5px;
  border: 1px solid #f9f2e9;
}
.methods .method .header {
}

.methods .method .name {
  display: table-cell;
  width: 50px;
  font-size: 0.7em;
  background-color: #10a54a;
  padding: 5px;
  color: white;
  font-weight: bold;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  text-decoration: none;
  text-transform: uppercase;
  text-align: center;
}

.methods .create {
  background-color: #f9f2e9;
  border-color: #f0e0ca;
}
.methods .method .create {
  background-color: #c5862b;
}
.methods .method.create .desc {
  color: #c5862b;
}
.create h3 {
  color: #c5862b;
}


.methods .put {
  background-color: #f9f2e9;
  border-color: #f0e0ca;
}
.methods .method .put {
  background-color: #c5862b;
}
.methods .method.put .desc {
  color: #c5862b;
}
.put h3 {
  color: #c5862b;
}

.methods .get {
  background-color: #e7f0f7;
  border-color: #c3d9ec;
}
.methods .method .get {
  background-color: #0f6ab4;
}
.methods .method.get .desc {
  color: #0f6ab4;
}
.get h3 {
  color: #0f6ab4;
}

.methods .monitor {
  background-color: #e7f0f7;
  border-color: #c3d9ec;
}
.methods .method .monitor {
  background-color: #0f6ab4;
}
.methods .method.monitor .desc {
  color: #0f6ab4;
}
.monitor h3 {
  color: #0f6ab4;
}

.methods .options {
  background-color: #e7f6ec;
  border-color: #c3e8d1;
}
.methods .method .options {
  background-color: #10a54a;
}
.methods .method.options .desc {
  color: #10a54a;
}
.options h3 {
  color: #10a54a;
}

.methods .delete {
  background-color: #f5e8e8; 
  border-color: #e8c6c7;
}
.methods .method .delete {
  background-color: #a41e22;
}
.methods .method.delete .desc {
  color: #a41e22;
}

.delete h3 {
  color: #a41e22;
}

.methods .method .url {
  display: table-cell;
  width: 60%;
  padding-left: 10px;
}

.method .url a {
  color: black;
  text-decoration: none;
  font-weight: bold;
}

.method .url a:hover {
  text-decoration: underline;
}

.methods .method .desc {
  display: table-cell;
  font-size: 15px;
  color: black;
  width: 40%;
  text-align: right;
}

.methods .content {
  font-size: 0.7em !important;
  margin-left: 5%;
}

.footer {
  margin-top: 40px;
  font-size: 0.9em;
  color: #666;
  display: table;
}

.footer .base_url {
  display: table-cell;
  padding-left: 10px;
  padding-right: 10px;
}

.footer .version {
  display: table-cell;
  padding-left: 10px;
  padding-right: 10px;
}

#body {
  padding: 0px;
}

h1, h2, h3, h4, h5, p {
    margin-bottom: 24px;
    padding: 0;
}

h2 {
    font-size: 36px;
    /* The bottom margin is small. It's designed to be used with gray meta text
     * below a post title. */
    margin: 24px 0 6px;
}
h3 {
    font-size: 24px;
}
h4 {
    font-size: 21px;
}
h5 {
    font-size: 18px;
    margin: 0 auto;
    font-family: Georgia, Palatino, serif;
    color: #444444;
    line-height: 1;
    max-width: 960px;
    padding: 30px;
}

.section {
  width: 100%;
}

table.entry {
  width: 100%;
  font-family: 'Fredoka One', cursive;
  font-size: 30px;

}

table.entry td.toggle a {
 float:right;
}

table.entry .params {
  color: #b10e2b;
}

table.entry .method {
  color: black;
  font-weight:bold;
  width: 100px;
}

table.entry .content {
  font-size: 18px;
  padding-left: 40px;
}

code {
 font-family: Consolas, Monaco, Andale Mono, monospace;
 line-height: 1.5;
 font-size: 13px;
 background-color: white;
 padding: 10px;
 border: 1px #4b4b4d dotted;
 border-radius: 5px;
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
}

.button {
    padding: 5px 10px;
    display: inline;
    background: #777 url(../images/button.png) repeat-x bottom;
    border: none;
    color: #fff;
    cursor: pointer;
    font-weight: bold;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-shadow: 1px 1px #666;
    text-decoration: none;
    }
.button:hover {
    background-position: 0 -48px;
    }
.button:active {
    background-position: 0 top;
    position: relative;
    top: 1px;
    padding: 6px 10px 4px;
    }
.button.red { background-color: #e50000; }
.button.purple { background-color: #9400bf; }
.button.green { background-color: #58aa00; }
.button.orange { background-color: #ff9c00; }
.button.blue { background-color: #2c6da0; }
.button.black { background-color: #333; }
.button.white { background-color: #fff; color: #000; text-shadow: 1px 1px #fff; }
.button.small { font-size: 75%; padding: 3px 7px; }
.button.small:hover { background-position: 0 -50px; }
.button.small:active { padding: 4px 7px 2px; background-position: 0 top; }
.button.large { font-size: 125%; padding: 7px 12px; }
.button.large:hover { background-position: 0 -35px; }
.button.large:active { padding: 8px 12px 6px; background-position: 0 top; }

.form .field label {
  font-size: 16px;
  font-weight: bold;
}

.form {
  display: table;
  /*margin-left: 5%;*/
  width: 75%;
  float:right;
}

.form form a {
  margin-top: 5px;
}

.form form {
  display: table-cell;
  width: 20%;
  float: left;
}
.output {
  display: table-cell;
  width: 75%;
  height: 200px;
  float: right;
}

.navigation_bar {
  display: inline;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
}

.navigation_bar  li {
  list-style: none;  
  display: block;  
  float: left;
  margin-top: 3px;
}

.navigation_bar li > a{  
  text-shadow: 0 2px 1px rgba(0,0,0,0.5);  
  display: block;  
  text-decoration: none;  
  color: #f0f0f0;  
  font-size: 1em;  
  margin: 0 .5em;  
}

.navigation_bar li h3 {  
  text-shadow: 0 2px 1px rgba(0,0,0,0.5);  
  display: block;  
  text-decoration: none;  
  color: #f0f0f0;  
  font-size: 1em;  
  margin: 0 .5em;
}

.navigation_bar li a:hover {  
  margin-top: 2px;  
}
#navigation_container {
   margin: 0 auto;
}

.navmenu {
  height: 25px;
  background-color: #89bf04;
  margin-top: -15px;
}

